tests/positive/basic/for_break_continue/input.ci
void main() {
    for (int i = 0; i < 5; i++) {
        if (i == 1) { continue; }
        if (i == 4) { break; }
        print(toString(i) + "\n");
    }
}
