tests/negative/semantic/for_init_float/input.ci
void main() {
    for (int i = 1.5; i < 3; i++) {
        print(toString(i) + "\n");
    }
}
